# breakfast

./: .coverage  .eslintrc.js  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  README.md  circle.yml  db.sqlite3  docker-compose.yaml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.circleci/: config.yml
.github/workflows/: ci.yml  test.yml
api/: fields.py  routing.py  tests.py  urls.py  views.py
api/consumers/: elections.py  elections_sync.py  sub_elections.py  sub_elections_sync.py
api/serializers/: candidate.py  election.py  image.py  subelection.py  user.py
api/tests/: test_candidate_api.py  test_cases.py  test_election_api.py  test_login_api.py  test_sub_election_api.py
api/view_sets/: election.py  subelection.py
api/views/: candidate.py  election.py  login.py  subelection.py
breakfast/: asgi.py  routing.py  settings.py  urls.py
election/: admin.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  util.py  views.py
election/consumers/: __init__.py  election.py  election_list.py
election/migrations/: 0001_initial.py  0002_candidate.py  0002_settings.py  0002_subelection_is_multi_selectable.py  0003_auto_20171031_1154.py  0003_candidate_result.py  0004_auto_20170206_1724.py  0004_auto_20181016_1757.py  0005_auto_20170206_1738.py  0005_auto_20181018_1514.py  0006_auto_20170206_1755.py  0006_auto_20181117_1152.py  0007_auto_20170207_2056.py  0007_candidate_saved_votes.py  0008_auto_20170207_2057.py  0009_auto_20170207_2059.py  0010_auto_20170209_1606.py  0011_auto_20170211_2201.py  0012_subelection_visible.py  0013_auto_20170211_2203.py
election/models/: __init__.py  ballot.py  candidate.py  election.py  election_user.py  image.py  state.py  sub_election.py
fixtures/: ballots.json  elections.json
src/: index.html  index.tsx  style.scss
staticfiles/: staticfiles.json  users.txt
templates/: react.html
(+78 files in other folders)
