[tool.poetry]
name = "breakfast"
version = "0.1.0"
description = ""
authors = ["Volker <volker@schiewe.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
channels = "~=2.1"
daphne = "~=2.2"
django-bootstrap3 = "~=11.0"
gunicorn = "~=19.9"
psycopg2 = "~=2.7"
whitenoise = "~=4.1"
dj-database-url = "~=0.4"
channels-redis = "~=2.3"
djangorestframework = "~=3.8"
django-rest-knox = "~=4.1"
django-filter = "~=2.0"
raven = "~=6.9"
django-choices = "~=1.6"
Django = "~=2.1"
Pillow = "~=6.1"
service-identity = "*"

[tool.poetry.dev-dependencies]
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
