[tool.poetry]
name = "breakfast"
version = "0.1.0"
description = ""
authors = ["Volker <volker@schiewe.dev>"]

[tool.poetry.dependencies]
python = "3.9.12"
channels = "~3.0"
daphne = "~3.0"
psycopg2 = "~2.8"
whitenoise = "~6.2"
dj-database-url = "~1.0"
channels-redis = "~3.4"
djangorestframework = "~3.12"
django-rest-knox = "~4.1"
django-filter = "~2.4"
sentry-sdk = "~1.9"
django-choices = "~1.7"
Django = "~3.2"
Pillow = "^8.3"
service-identity = "*"

[tool.poetry.dev-dependencies]
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
