[tool.poetry]
name = "breakfast"
version = "0.1.0"
description = ""
authors = ["Volker <volker@schiewe.dev>"]

[tool.poetry.dependencies]
python = "3.9.12"
psycopg2 = "~2.8"
whitenoise = "~6.2"
dj-database-url = "~1.0"
djangorestframework = "~3.13"
django-filter = "~22.1"
sentry-sdk = "~1.10"
django-choices = "~1.7"
Django = "~4.0"
Pillow = "^9.2"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
